--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href=""> 
+    <title>DineFlow-Smart Restaurant System</title>
+</head>
+<header>
+    <div>
+        <div>Home</div>
+        <div>Menu</div>
+        <div>Offers</div>
+        <div>Reviews</div>
+        <div>About</div>
+    </div>
+</header>
+<body>
 
+</body>
+<footer>
+    <div>
+        &copy copyright 2025 DineFlow | All Rights Reserved
+    </div>
+    <div>
+        Created by- <b>Parv Tiwari</b>
+    </div>
+</footer>
+</html>
