--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
     <link rel="stylesheet" href=""> 
     <title>DineFlow-Smart Restaurant System</title>
 </head>
-<header>
-    <div>
-        <div>Home</div>
-        <div>Menu</div>
-        <div>Offers</div>
-        <div>Reviews</div>
-        <div>About</div>
-    </div>
-</header>
 <body>
+    <header>
+        <nav>
+            <div>Home</div>
+            <div>Menu</div>
+            <div>Offers</div>
+            <div>Reviews</div>
+            <div>About</div>
+        </nav>
+    </header>
+    <main>
 
+    </main>
+    <footer>
+        <div>
+            <h3>&copy; 2025 DineFlow | All Rights Reserved</h3>
+            <h3>Created by- <b>Parv Tiwari</b></h3>
+        </div>
+    </footer>
 </body>
-<footer>
-    <div>
-        &copy copyright 2025 DineFlow | All Rights Reserved
-    </div>
-    <div>
-        Created by- <b>Parv Tiwari</b>
-    </div>
-</footer>
 </html>
