--- a/menu.html
+++ b/menu.html
@@ -194,7 +194,21 @@
                     <button>ADD</button>
                 </span>
             </div>
-
+            
+        </section>
+        <h2>Desserts</h2>
+        <section id="dessert">
+            <div class="menu-item">
+                <img src="images/gulab jamun.webp" alt="Gulab Jamun">
+                <h3>Gulab Jamun</h3>
+                <p>
+                    Soft spong Gulab Jamun drenched in sugar syrup.
+                </p>
+                <span>
+                    <h4>&#8377; 200</h4>
+                    <button>ADD</button>
+                </span>
+            </div>
         </section>
     </main>
     <footer>
