--- a/menu.html
+++ b/menu.html
@@ -242,7 +242,19 @@
                     A creamy, traditional Indian ice cream made with reduced milk, sugar, and fragrant spices like cardamom and saffron.
                 </p>
                 <span>
-                    <h4>&#8377; 275</h4>
+                    <h4>&#8377; 250</h4>
+                    <button>ADD</button>
+                </span>
+            </div>
+            
+            <div class="menu-item">
+                <img src="images/brownie.jpeg" alt="Brownie">
+                <h3>Brownie</h3>
+                <p>
+                    A dense, fudgy dessert with a rich chocolate flavor, made from butter, sugar, flour, and cocoa powder. Often topped with nuts or a dusting of powdered sugar.                
+                </p>
+                <span>
+                    <h4>&#8377; 240</h4>
                     <button>ADD</button>
                 </span>
             </div>
