--- a/index.html
+++ b/index.html
@@ -3,21 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href=""> 
+    <link rel="stylesheet" href="index.css"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <title>DineFlow-Smart Restaurant System</title>
 </head>
 <body>
     <header>
         <nav>
-            <div>Home</div>
-            <div>Menu</div>
-            <div>Offers</div>
-            <div>Reviews</div>
-            <div>About</div>
+            <a href="index.html">Home</a>
+            <a href="menu.html">Menu</a>
+            <a href="offers.html">Offers</a>
+            <a href="reviews.html">Reviews</a>
+            <a href="about.html">About</a>
         </nav>
     </header>
     <main>
-
+        
     </main>
     <footer>
         <div>
