--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,7 @@
                 <img src="images\tomato soup.jpg" alt="Tomato Soup">
                 <h3>Tomato Soup</h3>
                 <p>
-                    A rich and velvety soup made with ripe, fresh tomatoes, seasoned with a blend of aromatic herbs and spices. Perfectly balanced with a smooth, comforting texture, this classic dish is served warm for a satisfying experience. Ideal as a starter or a light meal.
+                    A rich and velvety soup made with ripe, fresh tomatoes, seasoned with a blend of aromatic herbs and spices. Ideal as a starter or a light meal.
                 </p>
                 <span>
                     <h4>&#8377; 250</h4>
@@ -63,7 +63,7 @@
                 <img src="images\paneer tikka.jpg" alt="Paneer Tikka">
                 <h3>Panner Tikka</h3>
                 <p>
-                    A flavorful Indian appetizer, marinated cubes of paneer are spiced with a blend of yogurt, herbs, and aromatic spices, then grilled to perfection. Served sizzling hot with tangy mint chutney and fresh onions, it's a smoky, tender, and delicious treat.
+                    A flavorful Indian appetizer, marinated cubes of paneer are spiced with a blend of yogurt, herbs, and aromatic spices, then grilled to perfection.
                 </p>
                 <span>
                     <h4>&#8377 450</h4>
@@ -75,7 +75,7 @@
                 <img src="images/manchurian.webp" alt="Manchurian">
                 <h3>Manchurian</h3>
                 <p>
-                    Delicious, crispy vegetable dumplings made with a mix of finely chopped vegetables, seasoned with aromatic spices, and deep-fried to a golden crisp. Tossed in a tangy, savory sauce with soy, garlic, ginger, and a touch of heat, this dish offers the perfect blend of textures and flavors.
+                    Delicious, crispy vegetable dumplings made with a mix of finely chopped vegetables.
                 </p>
                 <span>
                     <h4>&#8377 440</h4>
@@ -91,7 +91,7 @@
                 <img src="images/paneer butter masala.jpg" alt="Paneer Butter Masala">
                 <h3>Paneer Butter Masala</h3>
                 <p>
-                    A rich and creamy North Indian classic, this dish features soft cubes of paneer simmered in a velvety tomato-based gravy, infused with aromatic spices, butter, and cream.
+                    A rich and creamy North Indian classic, this dish features soft cubes of paneer simmered in a velvety tomato-based gravy.
                 </p>
                 <span>
                     <h4>&#8377; 475</h4>
@@ -139,7 +139,7 @@
                 <img src="images/steam rice.jpg" alt="Steam Rice">
                 <h3>Steam Rice / Jeera Dhaniya Pulao</h3>
                 <p>
-                    Fluffy, perfectly cooked basmati rice, steamed to perfection. Light and aromatic, this simple yet essential dish is the perfect accompaniment to any curry or stir-fry, enhancing the flavors of your main course.
+                    Fluffy, perfectly cooked basmati rice, steamed to perfection.
                 </p>
                 <span>
                     <h4>&#8377; 300</h4>
@@ -163,7 +163,7 @@
                 <img src="images/lachcha paratha.webp" alt="Laccha Paratha">
                 <h3>Plain Laccha Paratha / Butter Laccha Paratha</h3>
                 <p>
-                    A crispy, flaky, and soft Indian flatbread made by folding layers of dough and then cooking it on a hot griddle. The result is a beautifully layered paratha that’s perfect for scooping up curries and gravies.
+                    A crispy, flaky, and soft Indian flatbread made by folding layers of dough and then cooking it on a hot griddle.
                 </p>
                 <span>
                     <h4>&#8377; 60</h4>
@@ -175,7 +175,7 @@
                 <img src="images/tandoori roti.jpg" alt="Tandoori Roti">
                 <h3>Tandoori Roti</h3>
                 <p>
-                    A traditional Indian flatbread made from whole wheat flour, baked to perfection in a tandoor (clay oven). Its slightly smoky flavor, soft texture, and lightly charred exterior.
+                    A traditional Indian flatbread made from whole wheat flour, baked to perfection in a tandoor (clay oven).
                 </p>
                 <span>
                     <h4>&#8377; 40</h4>
@@ -187,7 +187,7 @@
                 <img src="images/kulcha.jpg" alt="Kulcha">
                 <h3>Kulcha</h3>
                 <p>
-                    A soft, fluffy Indian flatbread, traditionally stuffed with ingredients like potato, paneer, or a variety of spices, and baked in a tandoor. Served warm with a golden and slightly crispy exterior.
+                    A soft, fluffy Indian flatbread, traditionally stuffed with ingredients like potato, paneer, or a variety of spices, and baked in a tandoor.
                 </p>
                 <span>
                     <h4>&#8377; 60</h4>
@@ -215,7 +215,7 @@
                 <img src="images/sheer khurma.jpg" alt="Sheer Khurma">
                 <h3>Sheer Khurma</h3>
                 <p>
-                    A dessert made with vermicelli and a blend of aromatic spices like cardamom and saffron, simmered in creamy milk and sweetened to perfection. Topped with a mix of nuts and raisins.
+                    A dessert made with vermicelli and a blend of aromatic spices like cardamom and saffron.
                 </p>
                 <span>
                     <h4>&#8377; 270</h4>
@@ -251,7 +251,7 @@
                 <img src="images/brownie.jpeg" alt="Brownie">
                 <h3>Brownie</h3>
                 <p>
-                    A dense, fudgy dessert with a rich chocolate flavor, made from butter, sugar, flour, and cocoa powder. Often topped with nuts or a dusting of powdered sugar.                
+                    A dense, fudgy dessert with a rich chocolate flavor, made from butter, sugar, flour, and cocoa powder.
                 </p>
                 <span>
                     <h4>&#8377; 240</h4>
