--- a/index.html
+++ b/index.html
@@ -21,11 +21,27 @@
         </nav>
     </header>
     <main>
-        <div class="bg"></div>
+        <div class="bg">
+            <h1>Reach Out to Us for Your Celebrations and Events Inquiries</h1>
+        </div>
+        <br>
+        <div class="contact_us">
+            <h2>Contact Us</h2>
+            <p>Looking for more information about our services? Contact us today, and our dedicated team will get back to you as quickly as possible. We're here to help and look forward to connecting with you!</p>
+
+            <div>
+                <div>
+                    <h3>Address</h3>
+                </div>
+                <div>
+                    <h3>Phone</h3>
+                </div>
+            </div>
+        </div>        
     </main>
     <footer>
         <div>
-            <h3>&copy; 2025 DineFlow | All Rights Reserved</h3>
+            <h3>&copy; 2025 DineFlow. All Rights Reserved.</h3>
             <h3>Created by- <b>Parv Tiwari</b></h3>
         </div>
     </footer>
