--- a/index.html
+++ b/index.html
@@ -22,19 +22,26 @@
     </header>
     <main>
         <div class="bg">
-            <h1>Reach Out to Us for Your Celebrations and Events Inquiries</h1>
+            <h1>Welcome to DineFlow!</h1>
         </div>
-        <br>
         <div class="contact_us">
             <h2>Contact Us</h2>
+            <h4>Let Us Help!</h4>
             <p>Looking for more information about our services? Contact us today, and our dedicated team will get back to you as quickly as possible. We're here to help and look forward to connecting with you!</p>
-
-            <div>
+            <div class="details">
                 <div>
                     <h3>Address</h3>
+                    <p>
+                        SGSITS
+                        <br>
+                        23 Sir M. Visvesvaraya Marg
+                        <br>
+                        Indore, Madhya Pradesh 452003
+                    </p>
                 </div>
                 <div>
                     <h3>Phone</h3>
+                    <p>92851 21000</p>
                 </div>
             </div>
         </div>        
