--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                 </div>
                 <div>
                     <h3>Phone</h3>
-                    <p>92851 21000</p>
+                    <p>Parv Tiwari: 92851 21000</p>
+                    <p>Parth Gupta: 89892 47785</p>
                 </div>
             </div>
         </div>        
