Contact Us added

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </div>
         <div class="contact_us">
             <h2>Contact Us</h2>
-            <h4>Let Us Help!</h4>
-            <p>Looking for more information about our services? Contact us today, and our dedicated team will get back to you as quickly as possible. We're here to help and look forward to connecting with you!</p>
-            <div class="details">
+            <h4 class="lilita-one-regular">Let Us Help!</h4>
+            <p class="lilita-one-regular">Looking for more information about our services? Contact us today, and our dedicated team will get back to you as quickly as possible. We're here to help and look forward to connecting with you!</p>
+            <div class="details bebas-neue">
                 <div>
                     <h3>Address</h3>
                     <p>
