--- a/about.html
+++ b/about.html
@@ -22,26 +22,31 @@
     </header>
     <main>
         <div>
-            <div>
-                <h1 class="noto-sansH">We are DineFlow</h1>
-                <p class="noto-sansP">A smart and dynamic restaurant management system. Seamless ordering, efficient operations, and enhanced dining experiences.</p>             
+            <div class="container">
+                <div class="text">
+                    <h1 class="noto-sansH">We are DineFlow</h1>
+                    <p class="noto-sansP">A smart and dynamic restaurant management system. Seamless ordering, efficient operations, and enhanced dining experiences.</p>             
+                </div>
             </div>
-            <br>
-            <div>
-                <h1 class="noto-sansH">Innovation in Dining</h1>
-                <p class="noto-sansP">We revolutionize restaurant management with cutting-edge technology, ensuring smooth service, real-time analytics, and customer satisfaction.</p>
+            <div class="container">
+                <div class="text">
+                    <h1 class="noto-sansH">Innovation in Dining</h1>
+                    <p class="noto-sansP">We revolutionize restaurant management with cutting-edge technology, ensuring smooth service, real-time analytics, and customer satisfaction.</p>
+                </div>
             </div>
-            <br>
-            <div>
-                <h1 class="noto-sansH">Empowering Restaurants</h1>
-                <p class="noto-sansP">From digital menus and automated order management to real-time analytics and seamless payments, we help restaurants optimize operations and enhance guest experiences. DineFlow ensures everything flows effortlessly.</p>
+            <div class="container">
+                <div class="text">
+                    <h1 class="noto-sansH">Empowering Restaurants</h1>
+                    <p class="noto-sansP">From digital menus and automated order management to real-time analytics and seamless payments, we help restaurants optimize operations and enhance guest experiences. DineFlow ensures everything flows effortlessly.</p>
+                </div>
+                <img src="images/empowering_restaurants.webp" alt="img">
             </div>
-            <br>
-            <div>
-                <h1 class="noto-sansH">Shaping the Future of Dining</h1>
-                <p class="noto-sansP">With a commitment to efficiency and innovation, we're redefining how restaurants operate—where technology meets taste, and every meal is a delightful experience. We empower restaurants to deliver exceptional service.</p>
+            <div class="container">
+                <div class="text">
+                    <h1 class="noto-sansH">Shaping the Future of Dining</h1>
+                    <p class="noto-sansP">With a commitment to efficiency and innovation, we're redefining how restaurants operate—where technology meets taste, and every meal is a delightful experience. We empower restaurants to deliver exceptional service.</p>
+                </div>
             </div>
-            <br>
         </div>
     </main>
     <footer>
