--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
             <a href="index.html">Home</a>
             <a href="menu.html">Menu</a>
             <a href="offers.html">Offers</a>
-            <a href="reviews.html">Reviews</a>
             <a href="about.html">About</a>
+            <a href="contact.html">Contact Us</a>
+            <a href="login.html">Logout</a>
         </nav>
+        <div><a href="cart.html" style="text-align: right; padding-right: 0px;">Cart</a></div>
     </header>
     <main>
         <div class="bg">
