--- a/menu.html
+++ b/menu.html
@@ -18,6 +18,7 @@
             <a href="offers.html">Offers</a>
             <a href="reviews.html">Reviews</a>
             <a href="about.html">About</a>
+            <a href="login.html">Logout</a>
         </nav>
     </header>
 
